fixed dashbord aligns

--- a/assets/src/admin/block-styles.scss
+++ b/assets/src/admin/block-styles.scss
@@ -1,5 +1,5 @@
 :root {
-	--sf-primary-color: "";
+	--sf-primary-color: "#0284C7";
 	--sf-primary-text-color: "";
 	--sf-secondary-color: "";
 	--sureforms_bg: "";
